<resources>
    <string name="facebook_app_id">623099328333043</string>
    <string name="fb_login_protocol_scheme">fb623099328333043</string>

    <string name="app_name">Adme</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="skip_now">Skip Now</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="or">Or</string>
    <string name="give_your_email">Give Your Email</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="password_validity">Six characters or longer. Must Contain one Uppercase and lowercase letter, number and special character.</string>
    <string name="join">Join</string>
    <string name="privacy_policy">By joining,you agree to Adme\'s Terms of Service as well as to receive occasional emails from us.</string>
    <string name="already_have_an">Already Have An</string>
    <string name="account">Account</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_today">Today</string>
    <string name="title_leaderboard">Leader Board</string>
    <string name="title_income">Income</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_map">Map</string>
    <string name="please_wait">Please Wait</string>
    <string name="offline_status">You\'re Offline</string>
    <string name="online_status">You\'re Online</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="your_location">Your Location</string>
    <string name="client_current_location">Client Location</string>
    <string name="sv_current_location">Service Providers Location</string>
    <string name="current_location">Current Location</string>


    <string name="profile">Profile</string>
    <string name="contactModePrivate">This contact info is private</string>
    <string name="contactModePublic">This contact info is public</string>
    <string name="profileModePrvate">Your profile is private</string>
    <string name="profileModePublic">Your profile is public</string>
    <string name="profileModePrvateMsg">Your profile will not be shown to others</string>
    <string name="profileModePublicMsg">Your profile will be shown to others</string>

    <string name="leaderboard">LeaderBoard</string>
    <string name="select_service_category">Select Service Category</string>
    <string name="please_choose_category_for_your_service">Please choose category for your service</string>
    <string name="service_description">Service Description</string>
    <string name="this_is_your_service_description_choose_wisely_the_words_that_will_attract_the_clients">This is your service description. Choose wisely the words that will attract the clients</string>
    <string name="i_will_provide_with_hint">I will provide with some service that i am expert at.</string>
    <string name="i_will_provide_with_clause">I will provide with </string>
    <string name="working_hour">Working Hour</string>
    <string name="please_specify_your_working_hour_for_this_service_so_that_user_can_know_your_availability">Please specify your working hour for this service so that user can know your availability</string>
    <string name="to">To</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="_04_00_pm">04:00 PM</string>
    <string name="service_photos">Service Photos</string>
    <string name="upload_photos_that_describe_or_are_related_to_your_services">Upload photos that describe or are related to your services (At least one) </string>
    <string name="services">Services</string>
    <string name="add">Add</string>
    <string name="add_service">Add Service</string>
    <string name="service_name">Service Name</string>
    <string name="service_charge">Service Charge</string>
    <string name="cancel">Cancel</string>
    <string name="_50">$50</string>
    <string name="location">Location Info</string>
    <string name="miles">miles</string>
    <string name="reviews">Reviews</string>
    <string name="title_home">Home</string>
    <string name="title_service_history">Service history</string>
    <string name="services_available_in_your_area">Services available in your area</string>

    <string-array name="service_category">
        <item>Paint Job</item>
        <item>Electrical Job</item>
        <item>Telephone Line Repairing</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_rated_service_provider_s_in_your_area">Top Rated Service provider\'s in your area</string>

    <string name="default_notification_channel_id">EDMTev</string>

    //shared preference
    <string name="SHARED_PREFERENCE_FIRST_USE">shared_preference_first_use</string>
    <string name="SP_IS_LOGIN_SKIPPED">is_login_skipped</string>
    <string name="SP_IS_LOCATION_SETTING_SHOWED">is_location_setting_skipped</string>
    <string name="_6_digit_code">6-digit code</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_6_digit_code">Enter 6-digit Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="username">Username</string>
    <string name="continue_txt">Continue</string>
    <string name="adme_user">Adme User</string>

    // invoice
    <string name="invoice_summary">Invoice Summary</string>
    <string name="edit">Edit</string>
    <string name="invoice_total">Invoice Total</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="customer_address">Customer Address</string>
    <string name="issue_date">Issue Date</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="service_provider">Service Provider</string>
    <string name="service_category">Service Category</string>
    <string name="vat">Vat</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="send_invoice">Send Invoice</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="x">X</string>
    <string name="discount">Discount</string>
    <string name="write_your_phone_number">Write your phone number</string>
    <string name="write_a_username">Write a username</string>
    <string name="update_your_info">update your info</string>

</resources>
